kubernetes/apps/ai/comfyui/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: comfyui
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames: ["${GATUS_SUBDOMAIN}.${SECRET_DOMAIN}"]
  rules:
    - backendRefs:
        - name: comfyui-ui
          port: 8188
